Emoji Modal: Fix spacing in emoji list (#4712)

--- a/src/components/common/CustomEmojiSetsModal.module.scss
+++ b/src/components/common/CustomEmojiSetsModal.module.scss
@@ -41,7 +41,6 @@
   position: relative;
   width: 100%;
   min-height: 19rem;
-  max-height: 50vh;
   overflow-y: auto;
   padding: 0 0.5rem;
   text-align: left;
